--- a/css/style.css
+++ b/css/style.css
@@ -111,6 +111,8 @@ section {
 }
 
 .navbar {
+    background-color: rgb(22 22 23 / 80%);
+    backdrop-filter: blur(20px);
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
 }
 
