--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: 'Work Sans', sans-serif;
+    font-family: "Roboto", sans-serif !important;
     line-height: 1.8;
 }
 
@@ -111,14 +111,11 @@ section {
 }
 
 .navbar {
-    background-color: rgb(22 22 23 / 80%);
-    backdrop-filter: blur(20px);
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
 }
 
 .fuente-brand {
-    font-family: 'Abril Fatface', cursive;
-    font-weight:lighter;
+    font-family: 'Zen Dots', cursive;
 }
 
 .navbar-light .navbar-nav .nav-link.active,
