--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: "Roboto", sans-serif !important;
+    font-family: "Roboto", sans-serif ;
     line-height: 1.8;
 }
 
@@ -115,7 +115,8 @@ section {
 }
 
 .fuente-brand {
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Zen Dots', cursive !important;
+    
 }
 
 .navbar-light .navbar-nav .nav-link.active,
