--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,17 @@
     --color-principal: #6b7463;
 }
 
+@font-face {
+    font-family: 'elephant';
+    src: url('../font/ELEPHNT.TTF');
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 
-
+.nav-link{
+    font-family: 'Literata', serif;
+    font-size: 17px;
+}
 .color-principal {
     color: var(color-principal) !important;
 }
@@ -26,7 +34,6 @@ body {
     height: 450px;
 }
 
-h1,
 h2,
 h3,
 h4,
@@ -95,28 +102,13 @@ section {
     transform: translateY(-5px);
 }
 
-.video-btn {
-    width: 60px;
-    height: 60px;
-    background: linear-gradient(to right, #00e0fe, #1107fe);
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-    border-radius: 100px;
-}
-
-.video-btn i {
-    font-size: 32px;
-}
-
 .navbar {
     box-shadow: 0 12px 20px rgba(0, 0, 0, 0.1);
 }
 
 .fuente-brand {
-    font-family: 'Zen Dots', cursive !important;
-    
+    font-family: 'elephant', cursive !important;
+    font-weight:200;
 }
 
 .navbar-light .navbar-nav .nav-link.active,
@@ -138,7 +130,8 @@ section {
 }
 
 .service .service-img {
-    position: relative;
+    margin: auto;
+    max-width: 320px;
 }
 
 .service .service-img .icon {
