--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 :root {
     --color-principal: #6b7463;
+    --color-secundario: #abc392;
 }
 
 @font-face {
@@ -13,17 +14,48 @@
     font-family: 'Literata', serif;
     font-size: 17px;
 }
-.color-principal {
-    color: var(color-principal) !important;
-}
 
 body {
     font-family: "Roboto", sans-serif ;
     line-height: 1.8;
 }
 
-.color-principal{
+.text-shadow-titulos{
+    text-shadow: -6px 1px 0px rgba(0,0,0,0.03);
+}
+
+.color-texto-secundario{
+    color: var(--color-secundario);
+}
+
+.bg-principal{
     background-color:  var(--color-principal) !important;
+}
+
+.myButton {
+	
+	background:linear-gradient(to bottom, var(--color-principal), var(--color-principal) 100%);
+	background-color:#468144;
+	border-radius:8px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:9px 22px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #212222;
+    transition: all .9s ease-in-out;
+  
+}
+.myButton:hover {
+	background:linear-gradient(to bottom, #486840 5%, var(--color-principal) 100%);
+	color: rgb(176, 221, 206);   
+}
+.myButton:active {
+	position:relative;
+	top:1px;
 }
 
 .text-size-3{
@@ -66,7 +98,7 @@ section {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(180, 174, 174, 0), rgba(8, 54, 83, 0.399));
+    background: linear-gradient(rgba(180, 174, 174, 0), rgba(22, 85, 46, 0.274));
     z-index: -1;
 }
 
@@ -108,7 +140,7 @@ section {
 
 .fuente-brand {
     font-family: 'elephant', cursive !important;
-    font-weight:200;
+    font-weight:lighter;
 }
 
 .navbar-light .navbar-nav .nav-link.active,
