--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body {
     line-height: 1.8;
 }
 
+.border-radius{
+    border-radius: 8px;
+}
+
 .text-shadow-titulos{
     text-shadow: -6px 1px 0px rgba(0,0,0,0.03);
 }
