se a;adio la seccion de historias y

--- a/assets/css/quienesSomos.css
+++ b/assets/css/quienesSomos.css
@@ -1,9 +1,9 @@
-.quienes-somos{
-   font-size: 6vw;    
+.titulos-text{
+   font-size: 7vw;    
 }
 
-.quienes-somos-texto{
-   font-size: 2vw;
+.general-text{
+   font-size: 1rem;
 }
 
 
