--- a/assets/css/mision-vision.css
+++ b/assets/css/mision-vision.css
@@ -6,6 +6,11 @@
     border-radius: 30% 10% 70% 50%;
 }
 
+.max-height{
+    max-height: 200px;
+    max-width: 200px;
+}
+
 .card {
     border: none !important;
 }
