--- a/assets/css/quienesSomos.css
+++ b/assets/css/quienesSomos.css
@@ -6,3 +6,16 @@
    font-size: 1rem;
 }
 
+
+@media (min-width:768px) {
+   .lg-text-center{
+      text-align: center;
+   }
+      .pading-lg{
+         padding: 30px;
+      }
+      .p-2{
+         padding: none;
+      }  
+   
+}
