--- a/assets/css/historias-bonitas.css
+++ b/assets/css/historias-bonitas.css
@@ -1,5 +1,14 @@
 .img-trabajos-previos{
     margin: 20px auto;
-    width: 50%;
+    width: 35%;
+}
+
+
+
+@media (min-width:767px){
+    .img-trabajos-previos{
+        margin: 20px auto;
+        width: 40%;
+    }
 }
 
