--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,10 @@
     background-color: var(--color-principal);
 }
 
+.mt-6{
+    margin-top: 4rem;
+}
+
 /*ESTILOS A LA BARRA DE NAVEGACION*/
 
 .fuente-brand{
@@ -25,5 +29,4 @@
     box-shadow: 0px 15px 12px -9px rgba(0,0,0,0.76);
     -webkit-box-shadow: 0px 15px 12px -9px rgba(0,0,0,0.76);
     -moz-box-shadow: 0px 15px 12px -9px rgba(0,0,0,0.76);
-    
 }
