--- a/assets/css/servicios.css
+++ b/assets/css/servicios.css
@@ -10,3 +10,11 @@
   background-color: darkblue;
   margin: auto;
  }
+
+
+ .brservicios{
+   border-radius: 114px 31px 110px 0px;
+   -moz-border-radius: 114px 31px 110px 0px;
+   -webkit-border-radius: 114px 31px 110px 0px;
+   border: 0px solid #000000;
+ }
