--- a/assets/css/servicios.css
+++ b/assets/css/servicios.css
@@ -16,5 +16,5 @@
    border-radius: 114px 31px 110px 0px;
    -moz-border-radius: 114px 31px 110px 0px;
    -webkit-border-radius: 114px 31px 110px 0px;
-   border: 0px solid #000000;
+   border: 0px solid #e9e9e9;
  }
