--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,3 +38,14 @@
     -moz-box-shadow: 0px 15px 12px -9px rgba(0,0,0,0.76);
 }
 
+.margin-top{
+    margin-top: 10%;
+}
+
+
+@media (max-width:1023px) {
+    .margin-top{
+        margin-top: 20%;
+    }
+    
+ }
